# agent-runtime-observatory

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/aro_api/: __init__.py  main.py
apps/web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  RunDetail.tsx  RunsList.tsx  api.ts  badges.tsx  format.ts  styles.css  types.ts
apps/worker/: pyproject.toml
apps/worker/aro_worker/: __init__.py  __main__.py  main.py
docs/: architecture.md  benchmark.md  error-taxonomy.md  evidence-matrix.md  limitations.md  maintainer-pubkey.asc  object-model-alignment.md  object-model.md  signing.md  slo.md  telemetry-model.md  threat-model.md
examples/: README.md
examples/coding-agent-run/: expected.json  policy.yaml  script.json
examples/coding-agent-run/golden/: trace.jsonl
examples/coding-agent-run/workspace/: app.py
examples/document-research-run/: expected.json  policy.yaml  script.json
examples/document-research-run/golden/: trace.jsonl
examples/document-research-run/workspace/corpus/docs.example.com/: agent-governance.md
examples/policy-violation-run/: expected.json  policy.yaml  script.json
examples/policy-violation-run/golden/: trace.jsonl
examples/policy-violation-run/workspace/: .env  app.py
infra/: Dockerfile  README.md  docker-compose.yml
infra/grafana/dashboards/: agent-runtime.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/k8s/: api-deployment.yaml  api-service.yaml  kustomization.yaml  namespace.yaml  worker-deployment.yaml
infra/prometheus/: prometheus.yml
scripts/: record_goldens.py
tests/: conftest.py
tests/integration/: test_api.py  test_api_hardening.py  test_postgres_store.py  test_review_debt_api.py  test_worker.py  test_worker_retry.py
tests/replay/: test_golden_regression.py  test_tamper_detection.py
tests/unit/: test_alignment_schema.py  test_executor.py  test_policy.py  test_review_debt.py  test_schema.py  test_tools.py
