[project]
name = "aro-worker"
version = "0.2.3"
description = "Queue worker that executes queued agent runs and records traces."
requires-python = ">=3.11"
dependencies = ["aro-schema", "aro-runtime", "aro-telemetry"]

[tool.uv.sources]
aro-schema = { workspace = true }
aro-runtime = { workspace = true }
aro-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aro_worker"]
